GNOME Bugzilla – Bug 788703
openjpeg: Fix build against openjpeg 2.3
Last modified: 2017-10-25 13:28:05 UTC
Created attachment 361171 [details] [review] [PATCH] openjpeg: Fix build against openjpeg 2.3 OpenJPEG 2.3 installs its headers to /usr/include/openjpeg-2.3. However, since libopenjp2.pc seems to provide the right includedir CFLAGS at least since version 2.2, instead of adding yet another version check, just remove the subdir.
Review of attachment 361171 [details] [review]: works for me!
Comment on attachment 361171 [details] [review] [PATCH] openjpeg: Fix build against openjpeg 2.3 Please update this to latest GIT and remove all the configure checks for different 2.x versions, and also update the meson.build
I'm not sure 2.1 and earlier set the CFLAGS correctly.
Can you check and update accordingly?
Created attachment 361884 [details] [review] [PATCH 1/2] Revert "openjpeg: Support building with openjpeg 2.3" This reverts commit ef4d6b93e6078b7056c51a928f5620b13e55e323. A better fix follows.
Created attachment 361885 [details] [review] [PATCH 2/2] openjpeg: Support building with openjpeg 2.3, simpler OpenJPEG 2.3 installs its headers to /usr/include/openjpeg-2.3. However, since libopenjp2.pc seems to provide the right includedir CFLAGS at least since version 2.1, instead of adding yet another version check, just remove the subdir and the check for 2.2.
Created attachment 361923 [details] [review] [PATCH] openjpeg: Remove compatibility with openjpeg 2.0 And another one on top, if you want to simplify things further. Everyone seems to be shipping 2.1 as the oldest v2 version, even debian oldstable (jessie). Also remove an unneeded (debug?) #include <stdio.h>.
*** Bug 789481 has been marked as a duplicate of this bug. ***