ext/openjpeg/gstopenjpeg.h
@@ -38,10 +38,8 @@
 #define OPJ_CPRL CPRL
 #else
 #include <stdio.h>
-# if defined(HAVE_OPENJPEG_2_2)
-#  include <openjpeg-2.2/openjpeg.h>
-# elif defined(HAVE_OPENJPEG_2_1)
-#  include <openjpeg-2.1/openjpeg.h>
+# if defined(HAVE_OPENJPEG_2_1)
+#  include <openjpeg.h>
 # else
 #  include <openjpeg-2.0/openjpeg.h>
 # endif
